--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <okta.commons.version>1.3.0</okta.commons.version>
 
         <github.slug>okta/okta-sdk-java</github.slug>
-        <npm.exec.skip>false</npm.exec.skip> <!-- Set it to `true` to skip openAPI spec regeneration -->
+        <npm.exec.skip>true</npm.exec.skip> <!-- Set it to `true` to skip openAPI spec regeneration -->
     </properties>
 
 
@@ -414,6 +414,19 @@
                     <configuration>
                         <!-- no js is used in this project -->
                         <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.mycila</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <configuration>
+                        <licenseSets>
+                            <licenseSet>
+                                <excludes>
+                                    <exclude>src/swagger/api.yaml</exclude>
+                                </excludes>
+                            </licenseSet>
+                        </licenseSets>
                     </configuration>
                 </plugin>
             </plugins>
