--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>8.1.1-SNAPSHOT</version>
+    <version>9.0.0-beta-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -73,27 +73,27 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>8.1.1-SNAPSHOT</version>
+                <version>9.0.0-beta-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>8.1.1-SNAPSHOT</version>
+                <version>9.0.0-beta-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-api-swagger-templates</artifactId>
-                <version>8.1.1-SNAPSHOT</version>
+                <version>9.0.0-beta-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
-                <version>8.1.1-SNAPSHOT</version>
+                <version>9.0.0-beta-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-okhttp</artifactId>
-                <version>8.1.1-SNAPSHOT</version>
+                <version>9.0.0-beta-SNAPSHOT</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -132,14 +132,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>8.1.1-SNAPSHOT</version>
+                <version>9.0.0-beta-SNAPSHOT</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>8.1.1-SNAPSHOT</version>
+                <version>9.0.0-beta-SNAPSHOT</version>
             </dependency>
 
             <!-- Logging -->
@@ -368,7 +368,7 @@
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
                             <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>8.1.1-SNAPSHOT</version>
+                            <version>9.0.0-beta-SNAPSHOT</version>
                         </dependency>
                     </dependencies>
                 </plugin>
