--- a/pom.xml
+++ b/pom.xml
@@ -258,42 +258,42 @@
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.6.0</version>
-                    <executions>
-                        <execution>
-                            <id>npm install (initialize)</id>
-                            <goals>
-                                <goal>exec</goal>
-                            </goals>
-                            <phase>generate-sources</phase>
-                            <configuration>
-                                <skip>${npm.exec.skip}</skip>
-                                <executable>npm</executable>
-                                <arguments>
-                                    <argument>install</argument>
-                                </arguments>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>copy to swagger</id>
-                            <goals>
-                                <goal>exec</goal>
-                            </goals>
-                            <phase>generate-sources</phase>
-                            <configuration>
-                                <skip>${npm.exec.skip}</skip>
-                                <executable>sh</executable>
-                                <arguments>
-                                    <argument>-c</argument>
-                                    <argument>mkdir -p ${project.basedir}/../src/swagger &amp;&amp; cp ${project.basedir}/../node_modules/@okta/openapi/dist/spec.yaml ${project.basedir}/../src/swagger/api.yaml</argument>
-                                </arguments>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.codehaus.mojo</groupId>-->
+<!--                    <artifactId>exec-maven-plugin</artifactId>-->
+<!--                    <version>1.6.0</version>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <id>npm install (initialize)</id>-->
+<!--                            <goals>-->
+<!--                                <goal>exec</goal>-->
+<!--                            </goals>-->
+<!--                            <phase>generate-sources</phase>-->
+<!--                            <configuration>-->
+<!--                                <skip>${npm.exec.skip}</skip>-->
+<!--                                <executable>npm</executable>-->
+<!--                                <arguments>-->
+<!--                                    <argument>install</argument>-->
+<!--                                </arguments>-->
+<!--                            </configuration>-->
+<!--                        </execution>-->
+<!--                        <execution>-->
+<!--                            <id>copy to swagger</id>-->
+<!--                            <goals>-->
+<!--                                <goal>exec</goal>-->
+<!--                            </goals>-->
+<!--                            <phase>generate-sources</phase>-->
+<!--                            <configuration>-->
+<!--                                <skip>${npm.exec.skip}</skip>-->
+<!--                                <executable>sh</executable>-->
+<!--                                <arguments>-->
+<!--                                    <argument>-c</argument>-->
+<!--                                    <argument>mkdir -p ${project.basedir}/../src/swagger &amp;&amp; cp ${project.basedir}/../node_modules/@okta/openapi/dist/spec.yaml ${project.basedir}/../src/swagger/api.yaml</argument>-->
+<!--                                </arguments>-->
+<!--                            </configuration>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -349,24 +349,43 @@
                         </excludes>
                     </configuration>
                 </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.zalando.maven.plugins</groupId>-->
+<!--                    <artifactId>swagger-codegen-maven-plugin</artifactId>-->
+<!--                    <version>0.5.0-beta-1</version>-->
+<!--                    <configuration>-->
+<!--                        &lt;!&ndash; This is relative to a direct sub module &ndash;&gt;-->
+<!--                        <apiFile>${project.basedir}/../src/swagger/api.yaml</apiFile>-->
+<!--                        <additionalProperties>-->
+<!--                            <apiFile>${project.basedir}/../src/swagger/api.yaml</apiFile>-->
+<!--                        </additionalProperties>-->
+<!--                    </configuration>-->
+<!--                    <dependencies>-->
+<!--                        <dependency>-->
+<!--                            <groupId>com.okta.sdk</groupId>-->
+<!--                            <artifactId>okta-api-swagger-templates</artifactId>-->
+<!--                            <version>8.2.2-SNAPSHOT</version>-->
+<!--                        </dependency>-->
+<!--                    </dependencies>-->
+<!--                </plugin>-->
                 <plugin>
-                    <groupId>org.zalando.maven.plugins</groupId>
-                    <artifactId>swagger-codegen-maven-plugin</artifactId>
-                    <version>0.5.0-beta-1</version>
-                    <configuration>
-                        <!-- This is relative to a direct sub module -->
-                        <apiFile>${project.basedir}/../src/swagger/api.yaml</apiFile>
-                        <additionalProperties>
-                            <apiFile>${project.basedir}/../src/swagger/api.yaml</apiFile>
-                        </additionalProperties>
-                    </configuration>
-                    <dependencies>
-                        <dependency>
-                            <groupId>com.okta.sdk</groupId>
-                            <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>8.2.2-SNAPSHOT</version>
-                        </dependency>
-                    </dependencies>
+                    <groupId>org.openapitools</groupId>
+                    <artifactId>openapi-generator-maven-plugin</artifactId>
+                    <version>6.0.0-beta</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>generate</goal>
+                            </goals>
+                            <configuration>
+                                <inputSpec>${project.basedir}/../src/swagger/api.yaml</inputSpec>
+                                <generatorName>java</generatorName>
+                                <configOptions>
+                                    <sourceFolder>src/gen/java/main</sourceFolder>
+                                </configOptions>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
