--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,7 @@
     <inceptionYear>2017</inceptionYear>
 
     <properties>
-        <swagger-annotations.version>1.5.8</swagger-annotations.version>
-        <jackson.version>2.13.2.20220328</jackson.version>
+        <jackson.version>2.13.3</jackson.version>
         <snakeyaml.version>1.30</snakeyaml.version>
         <bouncycastle.version>1.70</bouncycastle.version>
         <jjwt.version>0.11.1</jjwt.version>
