--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -33,10 +33,10 @@
             <groupId>com.okta.sdk</groupId>
             <artifactId>okta-sdk-api</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.okta.sdk</groupId>
-            <artifactId>okta-sdk-impl</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.okta.sdk</groupId>-->
+<!--            <artifactId>okta-sdk-impl</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -85,36 +85,36 @@
     </dependencies>
 
     <profiles>
-        <profile>
-            <id>okhttp</id>
-            <activation>
-                <property>
-                    <name>!httpclient</name>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>com.okta.sdk</groupId>
-                    <artifactId>okta-sdk-okhttp</artifactId>
-                    <scope>runtime</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>httpclient</id>
-            <activation>
-                <property>
-                    <name>httpclient</name>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>com.okta.sdk</groupId>
-                    <artifactId>okta-sdk-httpclient</artifactId>
-                    <scope>runtime</scope>
-                </dependency>
-            </dependencies>
-        </profile>
+<!--        <profile>-->
+<!--            <id>okhttp</id>-->
+<!--            <activation>-->
+<!--                <property>-->
+<!--                    <name>!httpclient</name>-->
+<!--                </property>-->
+<!--            </activation>-->
+<!--            <dependencies>-->
+<!--                <dependency>-->
+<!--                    <groupId>com.okta.sdk</groupId>-->
+<!--                    <artifactId>okta-sdk-okhttp</artifactId>-->
+<!--                    <scope>runtime</scope>-->
+<!--                </dependency>-->
+<!--            </dependencies>-->
+<!--        </profile>-->
+<!--        <profile>-->
+<!--            <id>httpclient</id>-->
+<!--            <activation>-->
+<!--                <property>-->
+<!--                    <name>httpclient</name>-->
+<!--                </property>-->
+<!--            </activation>-->
+<!--            <dependencies>-->
+<!--                <dependency>-->
+<!--                    <groupId>com.okta.sdk</groupId>-->
+<!--                    <artifactId>okta-sdk-httpclient</artifactId>-->
+<!--                    <scope>runtime</scope>-->
+<!--                </dependency>-->
+<!--            </dependencies>-->
+<!--        </profile>-->
         <profile>
             <id>mock-server</id>
             <properties>
