--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>8.2.2-SNAPSHOT</version>
+        <version>10.0.0-beta-SNAPSHOT</version>
     </parent>
 
     <artifactId>okta-sdk-api</artifactId>
@@ -48,10 +48,6 @@
         <dependency>
             <groupId>com.okta.commons</groupId>
             <artifactId>okta-config-check</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.okta.commons</groupId>
-            <artifactId>okta-http-api</artifactId>
         </dependency>
         <dependency>
             <groupId>com.okta.commons</groupId>
@@ -166,7 +162,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.parent.basedir}/src/swagger/api.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/../src/swagger/api.yaml</inputSpec>
                             <generatorName>java</generatorName>
                             <configOptions>
                                 <sourceFolder>src/gen/java/main</sourceFolder>
