--- a/api/pom.xml
+++ b/api/pom.xml
@@ -135,7 +135,7 @@
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>openapi-generator</artifactId>
-            <version>6.0.1-SNAPSHOT</version>
+            <version>6.0.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
