--- a/api/pom.xml
+++ b/api/pom.xml
@@ -155,7 +155,7 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>6.0.1-SNAPSHOT</version>
+                <version>6.0.1</version>
                 <executions>
                     <execution>
                         <goals>
