--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
   jdk8:
     docker:
       - image: cimg/openjdk:8.0.322
+      - image: cimg/node:18.4.0
     environment:
         JVM_OPTS: -Xmx3200m
     steps: *build_steps
@@ -25,6 +26,7 @@ jobs:
   jdk11:
     docker:
       - image: cimg/openjdk:11.0.13
+      - image: cimg/node:18.4.0
     environment:
         JVM_OPTS: -Xmx3200m
     steps: *build_steps
