--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ aliases:
   - &build_steps
     - checkout
     - run: java -version
+    - run: npm install
     - run: ./mvnw clean install -Pci
     - run:
         when: on_fail
@@ -18,7 +19,6 @@ jobs:
   jdk8:
     docker:
       - image: cimg/openjdk:8.0.322
-      - image: cimg/node:18.4.0
     environment:
         JVM_OPTS: -Xmx3200m
     steps: *build_steps
@@ -26,7 +26,6 @@ jobs:
   jdk11:
     docker:
       - image: cimg/openjdk:11.0.13
-      - image: cimg/node:18.4.0
     environment:
         JVM_OPTS: -Xmx3200m
     steps: *build_steps
