--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ aliases:
   - &build_steps
     - checkout
     - run: java -version
+    - run: npm install
     - run: ./mvnw clean install -Pci
     - run:
         when: on_fail
