--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,16 @@ aliases:
         command: cat integration-tests/target/failsafe-reports/*dump*
 
 jobs:
-  
+  test:
+    executor: node/default
+    steps:
+      - checkout
+      - node/install-packages:
+          cache-path: ~/project/node_modules
+          override-ci-command: npm install
+      - run: sudo npm install -g npm@latest
+      - run: npm run test
+      
   jdk8:
     docker:
       - image: cimg/openjdk:8.0.322
@@ -35,5 +44,6 @@ jobs:
 workflows:
   build_and_test:
     jobs:
+      - test
       - jdk8
       - jdk11
