--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,5 @@
 version: 2.1
 
-orbs:
-  node: circleci/node@5.0.2
-
 aliases:
 
   - &build_steps
@@ -16,7 +13,9 @@ aliases:
     - run:
         when: on_fail
         command: cat integration-tests/target/failsafe-reports/*dump*
-      
+
+jobs:
+  
   jdk8:
     docker:
       - image: cimg/openjdk:8.0.322
