--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>10.0.0-beta-SNAPSHOT</version>
+        <version>10.0.0-beta</version>
     </parent>
 
     <artifactId>okta-sdk-api</artifactId>
